<resources>
    <string name="app_name">TimerExam</string>
    <string name="min_s">min(s)</string>
    <string name="play_interval">Play interval:</string>
    <string name="pause_interval">Pause interval:</string>
    <string name="repeat">Repeat</string>
    <string name="intervals">Intervals</string>
    <string name="time">Time</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="no_repeat">No Repeat</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="start_date">Start Date</string>
    <string name="_07_00">07:00</string>
    <string name="_19_00">19:00</string>
    <string name="sound">Sound</string>
    <string name="not_set">Not set</string>
    <string name="vibrate">Vibrate</string>
    <string name="save">Save &amp; Restart</string>
    <string name="stop">Stop</string>
</resources>
