<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.timerexam.ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/vertical_spacing_large"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/horizontal_spacing_small">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/MyTextView.SectionHeader"
                        android:text="@string/repeat"/>

                    <info.hoang8f.android.segmented.SegmentedGroup
                        xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        segmentedgroup:sc_border_width="1dp"
                        segmentedgroup:sc_corner_radius="5dp"
                        segmentedgroup:sc_tint_color="@color/colorAccent">

                        <RadioButton
                            android:id="@+id/radioRepeatNo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no_repeat"
                            style="@style/RadioButton" />

                        <RadioButton
                            android:id="@+id/radioRepeatDaily"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/daily"
                            style="@style/RadioButton" />

                        <RadioButton
                            android:id="@+id/radioRepeatWeekly"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/weekly"
                            style="@style/RadioButton" />

                        <RadioButton
                            android:id="@+id/radioRepeatMonthly"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/monthly"
                            style="@style/RadioButton" />
                    </info.hoang8f.android.segmented.SegmentedGroup>

                </LinearLayout>

                <include layout="@layout/vertical_separator" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/MyTextView.SectionHeader"
                        android:layout_gravity="center_vertical"
                        android:text="@string/start_date"/>

                    <TextView
                        android:id="@+id/txtStartDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/horizontal_spacing_small"
                        android:background="?android:attr/selectableItemBackground"
                        android:layout_gravity="center_vertical|end"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textSize="20sp"
                        android:clickable="true"/>
                </FrameLayout>

                <include layout="@layout/vertical_separator" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/MyTextView.SectionHeader"
                        android:text="@string/time"/>
                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:baselineAligned="false">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/from"/>
                        <TextView
                            android:id="@+id/txtStartTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/horizontal_spacing_small"
                            android:background="?android:attr/selectableItemBackground"
                            android:clickable="true"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textSize="48sp"
                            android:text="@string/_07_00" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/to"/>
                        <TextView
                            android:id="@+id/txtEndTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/horizontal_spacing_small"
                            android:background="?android:attr/selectableItemBackground"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textSize="48sp"
                            android:clickable="true"
                            android:text="@string/_19_00" />
                    </LinearLayout>
                </LinearLayout>

                <include layout="@layout/vertical_separator" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        style="@style/MyTextView.SectionHeader"
                        android:text="@string/intervals"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/horizontal_spacing_small"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:text="@string/play_interval"/>
                        <EditText
                            android:id="@+id/inputPlayInterval"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:textAlignment="viewEnd"
                            android:padding="8dp"
                            android:minWidth="40dp"
                            android:inputType="number"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:text="@string/min_s"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/horizontal_spacing_small"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:text="@string/pause_interval"/>
                        <EditText
                            android:id="@+id/inputPauseInterval"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:textAlignment="viewEnd"
                            android:padding="8dp"
                            android:minWidth="40dp"
                            android:inputType="number"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:text="@string/min_s"/>
                    </LinearLayout>
                </LinearLayout>


                <include layout="@layout/vertical_separator" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/MyTextView.SectionHeader"
                        android:text="@string/sound"/>
                    <TextView
                        android:id="@+id/txtTonePath"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:layout_marginStart="@dimen/horizontal_spacing_small"
                        android:layout_marginEnd="@dimen/horizontal_spacing_small"
                        android:padding="@dimen/horizontal_spacing_small"
                        android:background="?android:attr/selectableItemBackground"
                        android:textSize="18sp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:text="@string/not_set"/>
                    <CheckBox
                        android:id="@+id/checkVibrate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vibrate"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">
            <Button
                android:id="@+id/btnStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/horizontal_spacing_large"
                android:layout_marginBottom="@dimen/vertical_spacing_large"
                android:text="@string/stop"/>
            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/horizontal_spacing_large"
                android:layout_marginBottom="@dimen/vertical_spacing_large"
                android:text="@string/save"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
